Bug 112241 - [CSS Regions] Break after doesn't work correctly with auto-height regions
Summary: [CSS Regions] Break after doesn't work correctly with auto-height regions
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Andrei Bucur
URL:
Keywords: AdobeTracked
Depends on:
Blocks: 57312
  Show dependency treegraph
 
Reported: 2013-03-13 03:19 PDT by Andrei Bucur
Modified: 2013-03-13 11:34 PDT (History)
5 users (show)

See Also:


Attachments
Test case (1.50 KB, text/html)
2013-03-13 03:19 PDT, Andrei Bucur
no flags Details
Patch (8.14 KB, patch)
2013-03-13 06:19 PDT, Andrei Bucur
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andrei Bucur 2013-03-13 03:19:31 PDT
Created attachment 192893 [details]
Test case

The height of auto-height regions is not correctly computed in some cases. See the attached test.
Comment 1 Andrei Bucur 2013-03-13 06:19:00 PDT
Created attachment 192912 [details]
Patch
Comment 2 Dave Hyatt 2013-03-13 11:04:56 PDT
Comment on attachment 192912 [details]
Patch

r=me
Comment 3 WebKit Review Bot 2013-03-13 11:34:31 PDT
Comment on attachment 192912 [details]
Patch

Clearing flags on attachment: 192912

Committed r145728: <http://trac.webkit.org/changeset/145728>
Comment 4 WebKit Review Bot 2013-03-13 11:34:34 PDT
All reviewed patches have been landed.  Closing bug.